--- a/src/components/pages/home/Style/WhyHP.css
+++ b/src/components/pages/home/Style/WhyHP.css
@@ -158,8 +158,9 @@ p {
         border-top-width: 2px;
         border-top-color: #eaeaea;
         border-top-style: solid;
-        padding:2rem 7%;
-        height: 300vh;
+        padding: 2rem;
+        width: 37%;
+        height: auto;
     }
     
     /* .home1-section-heading1 {
@@ -171,7 +172,7 @@ p {
     
     .whyhp-home-section-heading2 {
         color: black;
-        font-size: 7rem;
+        font-size: 25px;
         text-align: center;
         font-weight: 600;
         /* border: solid blue; */
@@ -182,10 +183,10 @@ p {
     }
     
     .main_whyhp_container .whyhp_content_container p {
-        text-align: center;
+        text-align: justify;
         margin-top: 10px;
         /* margin: 20px 50px 50px 0px; */
-        font-size: 4rem;
+        font-size: 18px;
         width: 100%;
         /* border: solid green; */
     }
@@ -209,9 +210,8 @@ p {
         margin-top: 10px;
         text-align: center;
         width: 100%;
-        height: 85vh;
+        height: auto;
         background-color: #fff;
-        padding: 25px;
         box-sizing: border-box;
         border-radius: 5px;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -222,7 +222,7 @@ p {
         /* margin-top: 50px; */
         color: black;
         font-weight: 600;
-        font-size: 5rem;
+        font-size: 20px;
         /* border: solid red; */
     }
     
