--- a/src/components/pages/home/Style/Emergency.css
+++ b/src/components/pages/home/Style/Emergency.css
@@ -75,7 +75,8 @@
 
     .mobile-emergency {
         /* margin-top: 50px; */
-        width: 37%;
+        /* width: 37%; */
+        width: 90%;
         height: auto;
         display: flex;
         justify-content: center;
