--- a/src/components/pages/appointment/Styles/AppointmentLogItems.css
+++ b/src/components/pages/appointment/Styles/AppointmentLogItems.css
@@ -76,7 +76,7 @@
     .appointment-log-item {
       width: 100%;
       padding: 30px;
-      font-size: 3rem;
+      font-size: 12px;
       background-color: #f5f5f5;
       border: 1px solid #ddd;
       color: black;
@@ -128,7 +128,7 @@
     
     /* Style for the action button */
     .action-button {
-      font-size: 3rem;
+      font-size: 12px;
       padding: 30px;
       width: 50%;
       background-color: #e74c3c; /* Red color for the button */
