--- a/src/components/pages/home/Style/HIW.css
+++ b/src/components/pages/home/Style/HIW.css
@@ -165,18 +165,19 @@
 @media screen and (max-width: 768px) {
 
   .main_hiw_container {
-    background: url(../../../../assets/img/b4.jpg);
+    background: url(../../../../assets/img/phonebg2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     /* background-attachment: fixed; */
     justify-content: center;
     display: flex;
-    height: 220vh;
-    width: 100%;
+    height: auto;
+    width: 90%;
+    padding: 20px;
   }
 
   .whole_hiw_container {
-    margin: 100px;
+    margin: 0;
     /* border: solid red; */
   }
 
@@ -197,16 +198,16 @@
   }
 
   .hiw_content h2 {
-    color: black;
+    color: #082342;
     text-transform: uppercase;
     font-weight: bolder;
-    font-size: 4rem;
+    font-size: 20px;
   }
   
 
   .mySlides img {
-    width: 900px;
-    height: 900px;
+    width: 330px;
+    height: 300px;
   }
 
   /* Slideshow container */
@@ -228,7 +229,7 @@
   margin-top: -22px;
   color: white;
   font-weight: bold;
-  font-size: 50px;
+  font-size: 12px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
@@ -250,7 +251,7 @@
 .hiw-separator {
   /* width: 150px; */
   height: 4px;
-  background-color: #e12454;
+  background-color: #FAD400;
   margin: 20px;
 }
 
@@ -259,14 +260,14 @@ padding: 10px;
 }
 
 .hiw-text-container p{
-  color: black;
-  font-size: 40px;
+  color: #082342;
+  font-size: 14px;
   font-weight: 500;
   }
 
 /* Caption text */
 .text {
-  font-size: 42px;
+  font-size: 12px;
   padding: 8px 12px;
   width: 80%;
   position: absolute;
@@ -292,7 +293,7 @@ padding: 10px;
 /* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
-  font-size: 30px;
+  font-size: 12px;
   padding: 8px 12px;
   position: absolute;
   top: 0;
