--- a/src/components/Auth/Style/login.css
+++ b/src/components/Auth/Style/login.css
@@ -215,7 +215,7 @@ a:hover {
 @media screen and (max-width: 768px) {
 
   .login-main-container {
-    height: 160rem;
+    /* height: 160rem;
     background-color: #e12454;
     background-size: cover;
     background-color: white;
@@ -225,18 +225,18 @@ a:hover {
       display: grid;
       grid-template-columns: 1fr;
       position: fixed;
-     z-index: 4;
+     z-index: 4; */
      display: none;
   }
 
 
   .mobile-login-main-container {
     height: 160rem;
-    background-color: #e12454;
+    background-color: #082342;
     background-size: cover;
       width: 70rem;
-      display: grid;
-      grid-template-columns: 1fr;
+      display: flex;
+      flex-direction: column;
       position: fixed;
      z-index: 4;
   }
@@ -244,41 +244,42 @@ a:hover {
   .main-user-login-container {
       margin: 0;
       padding: 0;
-      width: 70rem;
-      height: 160rem;
+      width: 36.6%;
+      height: 100%;
       padding: 24px;
       display: flex;
       flex-direction: column;
       align-items: center;
       background-color: white;
-      border-radius: 10px;
+      border-radius: 30px;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
   
     .login-title {
-      margin-top: 3rem;
+      margin-top: 0;
       text-transform: uppercase;
-      font-size: 7rem;
+      font-size: 40px;
       font-weight: bold;
       text-align: center;
       letter-spacing: 1px;
-      color: black;
+      color: #082342;
       /* border: solid green; */
   }
   
   .user-separator {
       width: 150px;
       height: 4px;
-      background-color: #e12454;
-      margin: 24px;
+      background-color: #FAD400;
+      margin: 20px;
   }
   
   .welcome-message {
+      display: none;
       text-align: center;
-      font-size: 1.1em;
+      font-size: 18px;
       line-height: 28px;
       margin-bottom: 30px;
-      color: #696969;
+      color: #082342;
       /* border: solid yellow; */
   }
   
@@ -286,6 +287,7 @@ a:hover {
     width: 100%;
     display: flex;
     flex-direction: column;
+    margin-top: 30px;
   }
   
   .user-login-form-control {
@@ -320,7 +322,7 @@ a:hover {
   }
   
   .user-login-box input:focus ~ i {
-    color: #e12454;
+    color: #FF5C17;
   }
   
   /* Hide the browser's default checkbox */
@@ -349,7 +351,7 @@ a:hover {
   
   /* When the checkbox is checked, add a blue background */
   .user-check-box  input:checked ~ .checkmark {
-    background-color: #e12454;
+    background-color: #082342;
   }
   
   /* Create the checkmark/indicator (hidden when not checked) */
@@ -385,7 +387,7 @@ a:hover {
   
    .rm span {
     padding-left: 10px;
-    color: black;
+    color: #082342;
     font-size: 15px;
   }
     
@@ -395,7 +397,7 @@ a:hover {
       text-transform: uppercase;
       letter-spacing: 2px;
       font-weight: bold;
-      background-image: linear-gradient(to right, #e12454, #6f0d26);
+      background-image: linear-gradient(to right, #024ca1, #082342);
       cursor: pointer;
       transition: opacity 0.4s;
   }
@@ -410,27 +412,27 @@ a:hover {
   }
   
   a{
-    color: black;
+    color: #082342;
     text-decoration: none;
   }
   
   a:hover {
-    color: #e12454;
+    color: #FAD400;
     text-decoration: underline;
   }
   
   .side {
+    width: 37%;
     display: flex;
-    margin-left: 120px;
-    margin-bottom: 30px;
-    background-size: 100% 102%;
+    justify-content: center;
+    margin: 30px 0px 30px 0px;
+    background-size: 100%;
     /* display: none; */
   }
   
   .side img {
-    display: flex;
-    width: 75%;
-    max-width: 100%;
+    width: 300px;
+    height: auto;
     /* display: none; */
   }
 
