--- a/src/components/Auth/Style/signup.css
+++ b/src/components/Auth/Style/signup.css
@@ -192,30 +192,27 @@
 
 @media screen and (max-width: 768px) {
   .signup-main-container {
-    min-height: 100vh;
-  background: url(../../../assets/img/wave5.png);
-background-size: cover;
-  background-color: white;
-background-position: center;
-background-repeat: no-repeat;
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  position: fixed;
-  z-index: 1;
-  padding:2rem 7%;
+    height: 160rem;
+    background-color: #082342;
+    background-size: cover;
+      width: 70rem;
+      display: flex;
+      flex-direction: column;
+      position: fixed;
+      padding: 0;
+     z-index: 4;
 }
 
 
 .title {
-font-family: 'montserrat';
-text-transform: uppercase;
-font-size: 3rem;
-font-weight: bold;
-text-align: center;
-letter-spacing: 1px;
-color: #082342;
-/* border: solid green; */
+  margin-top: 0;
+  text-transform: uppercase;
+  font-size: 40px;
+  font-weight: bold;
+  text-align: center;
+  letter-spacing: 1px;
+  color: #082342;
+  /* border: solid green; */
 }
 
 .signup-separator {
@@ -226,15 +223,16 @@ color: #082342;
 }
 
 .main-user-signup-container {
-  margin-top: 25px;
+  margin: 0;
+  padding: 0;
+  width: 36.6%;
+  height: 100%;
   padding: 24px;
-  max-height: 100%;
-  height: 95%;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: white;
-  border-radius: 10px;
+  border-radius: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   
   
@@ -328,15 +326,19 @@ color: #082342;
 }
 
 .signup-side {
+  width: 37%;
   display: flex;
-  margin-left: 13vh;
-  background-size: 100% 102%;
+  justify-content: center;
+  margin: 30px 0px 30px 0px;
+  background-size: 100%;
+  /* display: none; */
   
 }
 
 .signup-side img {
-  width: 70vh;
-  height: 70vh;
+  width: 250px;
+  height: auto;
+  /* display: none; */
 }
 
 .user-signup-box .btn1 {
