--- a/src/components/pages/home/Style/Service.css
+++ b/src/components/pages/home/Style/Service.css
@@ -114,7 +114,7 @@
         background-color: #fff;
         padding: 6px;
         /* width: 37%; */
-        width: 90%;
+		width: 100dvw;
     }
     
     /* .home1-section-heading1 {
