--- a/src/components/pages/home/Style/Emergency.css
+++ b/src/components/pages/home/Style/Emergency.css
@@ -76,7 +76,7 @@
     .mobile-emergency {
         /* margin-top: 50px; */
         /* width: 37%; */
-        width: 90%;
+		width: 100dvw;
         height: auto;
         display: flex;
         justify-content: center;
