--- a/src/components/pages/home/Style/HomePage.css
+++ b/src/components/pages/home/Style/HomePage.css
@@ -54,8 +54,8 @@
 	.phone-home{
 		/* margin-top: 50px; */
 		min-height: 80vh;
-		/* width: 37%; */
-		width: 90%;
+		/* width: 37; */
+		width: 100dvw;
 		padding: 0%;
 		display: flex;
 		align-items: center;
