--- a/src/components/pages/appointment/Styles/AppointmentLog.css
+++ b/src/components/pages/appointment/Styles/AppointmentLog.css
@@ -119,7 +119,7 @@
     
     /* Styling for the table header */
     .appointment-log-table th {
-      font-size: 4rem;
+      font-size: 14px;
       background-color: #e12454; /* pinkred color for header background */
       color: #ffffff;
       font-weight: bold;
