--- a/src/components/pages/appointment/Styles/AppointmentLog.css
+++ b/src/components/pages/appointment/Styles/AppointmentLog.css
@@ -128,7 +128,7 @@
     /* Styling for the table header */
     .appointment-log-table th {
       font-size: 14px;
-      background-color: #e12454; /* pinkred color for header background */
+      background-color: #082342; /* pinkred color for header background */
       color: #ffffff;
       font-weight: bold;
       text-align: center;
