--- a/src/components/pages/home/Style/AboutUs.css
+++ b/src/components/pages/home/Style/AboutUs.css
@@ -194,7 +194,7 @@ margin: 0;
 }
 .about-img .row .content h6{
   font-size: 25px;
-  color: #FF5C17;
+  color: #FAD400;
   padding-bottom: 12px;
 }
 .about-img .row .content p{
