--- a/src/components/pages/home/Style/WhyHP.css
+++ b/src/components/pages/home/Style/WhyHP.css
@@ -180,7 +180,7 @@ p {
     }
     
     .whyhp-home-section-heading2 span {
-        color: #F50057;
+        color: #FAD400;
     }
     
     .main_whyhp_container .whyhp_content_container p {
